<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/progressbarTextView"
        android:layout_above="@+id/progress_circular"
        android:text="@string/retrieving_quiz_from_database"/>
    <ProgressBar
        android:id="@+id/progress_circular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        />
    <LinearLayout
        android:id="@+id/dataLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:orientation="vertical">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/dataRecyclerView"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        />

    <Button
        android:id="@+id/rmBtn"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:onClick="rmAll"
        android:layout_weight="0.8"
        android:text="@string/fjern_alle" />

    </LinearLayout>
</RelativeLayout>
