<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="300dp"
    android:gravity="center"
    android:layout_margin="16dp"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:text="@string/register_device_owner"/>
    <EditText
        android:id="@+id/ownerDialogEditText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="Name"/>
    <Button
        android:id="@+id/ownerDialogButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@android:string/ok"
        />

</LinearLayout>