<resources>
    <string name="app_name">Oblig1</string>
    <string name="quiz_image">Quiz image</string>
    <string name="name_of_person_in_image">Name of person in image</string>
    <string name="answer">Answer</string>
    <string name="quizQuestion">Question %1$s / %2$s</string>
    <string name="score">Score: %1$s / %2$s</string>
    <string name="fjern_alle">Fjern alle</string>
    <string name="navn">Navn</string>
    <string name="registerOwner">Register Device Owner</string>
    <string name="register_device_owner">Register Device Owner</string>
    <string name="retrieving_quiz_from_database">Retrieving quiz from database</string>
    <string name="downloading_database">Downloading database!</string>
    <string name="database">DATABASE</string>
    <string name="add">ADD</string>
    <string name="quiz">QUIZ</string>

    <string-array name="navn">
        <item>Ole</item>
        <item>Petter</item>
        <item>Stefan</item>
        <item>Simen</item>
    </string-array>
</resources>
