<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progress_circular"
        android:layout_centerInParent="true"/>
    <TextView
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:id="@+id/progressbarTextView"
        android:layout_above="@+id/progress_circular"
        android:text="@string/retrieving_quiz_from_database"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/questionNumberTextView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_margin="8dp"/>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_below="@+id/questionNumberTextView">
        <ImageView
            android:id="@+id/quizImage"
            android:layout_width="wrap_content"
            android:maxHeight="100dp"
            android:maxWidth="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:contentDescription="@string/quiz_image"/>
        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:layout_weight="3"
                android:layout_margin="16dp"
                android:layout_width="0dp"
                android:id="@+id/quizEditText"
                android:layout_height="wrap_content"
                android:hint="@string/name_of_person_in_image"
                android:autofillHints="Name" />

            <Button
                android:id="@+id/quizButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_weight="1.5"
                android:onClick="answerQuiz"
                android:text="@string/answer" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:id="@+id/quizRecyclerView">
        </androidx.recyclerview.widget.RecyclerView>
    </LinearLayout>

</RelativeLayout>